; ModuleID = '/home/carl/AnghaBench/jq/src/decNumber/extr_example7.c_main.c'
source_filename = "/home/carl/AnghaBench/jq/src/decNumber/extr_example7.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DECQUAD_String = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"Please supply two numbers to add.\0A\00", align 1
@DEC_INIT_DECQUAD = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"%s + %s => %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %12 = load i32, i32* @DECQUAD_String, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %9, align 8
  %15 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %10, align 8
  %16 = call i32 @decContextTestEndian(i32 0)
  %17 = load i32, i32* %4, align 4
  %18 = icmp slt i32 %17, 3
  br i1 %18, label %19, label %21

19:                                               ; preds = %2
  %20 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  store i32 1, i32* %11, align 4
  br label %41

21:                                               ; preds = %2
  %22 = load i32, i32* @DEC_INIT_DECQUAD, align 4
  %23 = call i32 @decContextDefault(i32* %8, i32 %22)
  %24 = load i8**, i8*** %5, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i64 1
  %26 = load i8*, i8** %25, align 8
  %27 = call i32 @decQuadFromString(i32* %6, i8* %26, i32* %8)
  %28 = load i8**, i8*** %5, align 8
  %29 = getelementptr inbounds i8*, i8** %28, i64 2
  %30 = load i8*, i8** %29, align 8
  %31 = call i32 @decQuadFromString(i32* %7, i8* %30, i32* %8)
  %32 = call i32 @decQuadAdd(i32* %6, i32* %6, i32* %7, i32* %8)
  %33 = call i32 @decQuadToString(i32* %6, i8* %15)
  %34 = load i8**, i8*** %5, align 8
  %35 = getelementptr inbounds i8*, i8** %34, i64 1
  %36 = load i8*, i8** %35, align 8
  %37 = load i8**, i8*** %5, align 8
  %38 = getelementptr inbounds i8*, i8** %37, i64 2
  %39 = load i8*, i8** %38, align 8
  %40 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* %36, i8* %39, i8* %15)
  store i32 0, i32* %3, align 4
  store i32 1, i32* %11, align 4
  br label %41

41:                                               ; preds = %21, %19
  %42 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %42)
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @decContextTestEndian(i32) #2

declare dso_local i32 @printf(i8*, ...) #2

declare dso_local i32 @decContextDefault(i32*, i32) #2

declare dso_local i32 @decQuadFromString(i32*, i8*, i32*) #2

declare dso_local i32 @decQuadAdd(i32*, i32*, i32*, i32*) #2

declare dso_local i32 @decQuadToString(i32*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
